--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,41 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.imgs {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  flex-direction: row;
+  width: 150%;
+  max-width: 1000px; 
+  margin: auto;
+ margin-top: 8%;
+}
+.img1{
+  border-radius:  25px 0 0 25px;
+}
+.img3{
+  border-radius:  0 25px 25px 0;
+}
+.tx1{
   color: white;
+  margin-top: -390px;
+  margin-left: 30px;
+  font-size: large;
+  font-weight: 500;
+}
+.image-container {
+  position: relative;
+  width: calc(100% / 3 - 10px); 
+  overflow: hidden;
+  transition: width 0.3s ease-in-out, z-index 0.3s;
+  height: 400px;
 }
 
-.App-link {
-  color: #61dafb;
+.image-container img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: transform 0.3s ease-in-out;
+  
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.image-container:hover {
+  width: calc(100% / 2);
+  z-index: 1;
 }
